Add `ci.yml` for matrix builds on Java/OS
* Add test-specific `javaLauncher` configuration based
on the `testJavaVersion` project property propagated
from the mentioned `ci.yml`

**Auto-cherry-pick to `6.5.x`**